try to fix the bg resize bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,6 @@
 
   .main-bg {
     background-image: url("/bg.jpeg");
-    background-size: cover;
   }
 
   .card-style {
